delete the scss and code css again

--- a/files/style.css
+++ b/files/style.css
@@ -1,66 +1,117 @@
-* {
-  box-sizing: border-box; }
-
-body {
+*{
+  box-sizing: border-box;
+  font-family: "Roboto Condensed", sans-serif;
+}
+body{
   margin: 0;
-  font-family: 'Roboto Condensed', sans-serif; }
 
-.intro {
-  background: url("bg.jpeg");
-  background-size: cover;
-  height: 700px; }
-  .intro nav {
-    padding: 30px; }
-    .intro nav .fab {
-      font-size: 50px;
-      color: #fff; }
-    .intro nav aside {
-      float: right; }
-      .intro nav aside .bar1, .intro nav aside .bar2, .intro nav aside .bar3 {
-        width: 35px;
-        height: 5px;
-        background: #fff;
-        margin: 6px 0px;
-        transition: 0.5s; }
-      .intro nav aside .change .bar1 {
-        transform: rotate(-45deg) translate(-9px, 6px); }
-      .intro nav aside .change .bar2 {
-        opacity: 0; }
-      .intro nav aside .change .bar3 {
-        transform: rotate(45deg) translate(-7px, -8px); }
-      .intro nav aside .menu-content {
-        height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        right: 0;
-        background-color: #111;
-        overflow: hidden;
-        transition: 0.5s;
-        padding-top: 60px;
-        transition: 0.5s; }
-        .intro nav aside .menu-content a {
-          display: block;
-          padding: 20px 8px 8px 50px;
-          text-decoration: none;
-          font-size: 25px;
-          color: #fff; }
-        .intro nav aside .menu-content .dropdown .btn {
-          font-size: 25px;
-          color: #fff;
-          cursor: pointer;
-          border: 0;
-          outline: 0;
-          background: inherit;
-          padding: 20px 8px 8px 50px; }
-        .intro nav aside .menu-content .dropdown .dropdown-item {
-          display: none; }
-        .intro nav aside .menu-content .dropdown:hover .dropdown-item {
-          display: block; }
-
-.change1 .menu-content {
-  width: 20%; 
+}
+/* section intro */
+.intro{
+  background: url("img/bg.jpeg");
+  height: 700px;
+}
+/* logo */
+.fabs{
+  font-size: 50px;
+  color:#DDD;
+  animation-name: spin;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes spin{
+  0%{transform: rotate(0deg)}
+  100%{transform: rotate(360deg)}
+}
+/* endlogo */
+nav{
+  padding:20px;
+}
+aside{
+  float: right;
 }
 
-/*# sourceMappingURL=style.css.map */
+/* icon-wrapper */
+.icon-wrapper{
+  position: fixed;
+  top:30;
+  right: 20px;
+  cursor: pointer;
+}
+
+.bar1,.bar2,.bar3{
+  width:35px;
+  height: 5px;
+  margin:6px 0;
+  background: #fff;
+  transition: 0.5s;
+}
+.change .bar1 {
+  transform: rotate(-45deg) translate(-9px,6px);
+}
+.change .bar2{
+  opacity: 0;
+}
+.change .bar3{
+  transform: rotate(45deg) translate(-8px,-8px);
+
+}
+.change3 .icon-wrapper{
+  animation-name: move;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+@keyframes move{
+  from{right:0}
+  to{right:20%}
+}
+/* endicon */
+
+/* content menu */
+  .menu-content{
+    padding-top:50px;
+    position: fixed;
+    top:0;
+    right: 0;
+    background:rgba(0,0,0,0.8);
+    height: 100%;
+    width: 0;
+    transition: 0.5s;
+   }
+   .change1 .menu-content{
+     width: 20%;
+   }
+   .menu-content a{
+     padding:20px 20px 8px 60px;
+     display: block;
+     color:#fff;
+     text-decoration: none;
+     font-size: 30px;
+     transition: 0.5s;
+   }
+   .menu-content a:hover{
+      color:#4C6EF5;
+   }
+   .dropdown button{
+      border:0;
+      padding:8px 20px 20px 60px;
+      background:inherit;
+      font-size: 25px;
+      cursor: pointer;
+      color:#fff;
+   }
+   .dropdown-item{
+    display: none;
+    transition: 0.5s;
+
+   }
+   .dropdown-item a{
+    padding:8px 20px 20px 80px;
+  }
+  .dropdown:hover .dropdown-item{
+    display: block;
+    }
+/* endcontent */
+
+/* endsection intro */
